# ezemoji

./: Cargo.toml  README.md
.github/workflow/: ezemoji.yaml
examples/: custom.rs  emoji_use.rs
src/: lib.rs
